recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels
  if (levels==0) {
      ^Sierpinski:2: error: not found: value lenght
    avance(lenght) ; droite(120) ; avance(lenght) ; droite(60) ; avance(length) ; droite(60)
           ^Sierpinski:2: error: not found: value lenght
    avance(lenght) ; droite(120) ; avance(lenght) ; droite(60) ; avance(length) ; droite(60)
                                          ^Sierpinski:5: error: not found: value levels
    sierpinski(levels-1,lenght/2)
               ^Sierpinski:5: error: not found: value lenght
    sierpinski(levels-1,lenght/2)
                        ^